// Copyright 2024 The Authors (see AUTHORS file)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto.api;

option go_package = "github.com/abcxyz/team-link/apis/v1alpha3/proto;api";

import "proto/group.proto";

message GroupMapping {
    oneof source {
        Ganpati ganpati = 1;
        GoogleGroups google_groups = 2;
    }
    oneof target {
        GitHub github = 3;
        GitLab gitlab = 4;
    }
}

message GroupMappings {
    repeated GroupMapping mappings = 1;
}

message UserMapping {
    string source = 1;
    string target = 2;
}

message UserMappings {
    repeated UserMapping mappings = 1;
}

message TeamLinkMappings {
    GroupMappings group_mappings = 1;
    UserMappings user_mappings = 2;
}
